--- a/probability_pro.bib
+++ b/probability_pro.bib
@@ -192,3 +192,22 @@
   publisher={The University of Chicago Press}
 }
 
+
+
+@inproceedings{deng2013improving,
+  title={Improving the sensitivity of online controlled experiments by utilizing pre-experiment data},
+  author={Deng, Alex and Xu, Ya and Kohavi, Ron and Walker, Toby},
+  booktitle={Proceedings of the sixth ACM international conference on Web search and data mining},
+  pages={123--132},
+  url={www.exp-platform.com/Documents/2013-02-CUPED-ImprovingSensitivityOfControlledExperiments.pdf},
+  year={2013}
+}
+
+
+@article{buzun2015stochastic,
+  title={Stochastic Analysis in Problems, part 1 (in Russian)},
+  author={Buzun, Nazar and Gasnikov, Alexander and Goncharov, Fedor and Gorbachev, Oleg and Guz, Sergey and Krymova, Ekaterina and Natan, Andrey and Chernousova, Elena},
+  journal={arXiv preprint arXiv:1508.03461},
+  url={https://arxiv.org/abs/1508.03461},
+  year={2015}
+}
