--- a/probability_pro.bib
+++ b/probability_pro.bib
@@ -211,3 +211,27 @@
   url={https://arxiv.org/abs/1508.03461},
   year={2015}
 }
+
+
+@article{klain2020probabilistic,
+  title={A probabilistic proof of the spherical excess formula},
+  author={Klain, Daniel A},
+  journal={The American Mathematical Monthly},
+  volume={128},
+  number={1},
+  pages={70--72},
+  year={2020},
+  url={https://arxiv.org/abs/1909.04505},
+  publisher={Taylor \& Francis}
+}
+
+
+@incollection{welzl1994gram,
+  title={Gram's equation—A probabilistic proof},
+  author={Welzl, Emo},
+  booktitle={Results and Trends in Theoretical Computer Science},
+  pages={422--424},
+  year={1994},
+  url={http://www3.math.tu-berlin.de/combi/wp_henk/wp-content/uploads/2011/05/Welzl-Grams-equation-a-probabilistic.pdf},
+  publisher={Springer}
+}
