--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -144,6 +144,7 @@ style=alphabetic]{biblatex}
 \end{enumerate}
 
 \begin{sol}
+  $\P(X = 3) = \frac{2}{4} \frac{2}{3} \frac{1}{2} + \frac{2}{4} \frac{2}{3} \frac{1}{2}$
 \end{sol}
 \end{problem}
 
