--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -144,7 +144,10 @@ style=alphabetic]{biblatex}
 \end{enumerate}
 
 \begin{sol}
-  $\P(X = 3) = \frac{2}{4} \frac{2}{3} \frac{1}{2} + \frac{2}{4} \frac{2}{3} \frac{1}{2}$
+  \begin{enumerate}
+    \item $\P(X = 3) = \frac{2}{4} \frac{2}{3} \frac{1}{2} + \frac{2}{4} \frac{2}{3} \frac{1}{2}$;
+    \item $\E(X) = 2 \cdot \P(X = 2) + 3 \cdot \P(X = 3) + 4 \cdot \P(X=4)$.
+  \end{enumerate}
 \end{sol}
 \end{problem}
 
@@ -187,9 +190,12 @@ style=alphabetic]{biblatex}
 \end{problem}
 
 \begin{problem}
- Саша и Маша по очереди подбрасывают кубик до первой шестёрки. Посуду будет
-мыть тот, кто первым выбросит шестерку. Маша бросает кубик первой.
-Какова вероятность того, что посуду будет мыть Маша? Сколько в среднем раз они будут бросать кубик?
+Саша и Маша по очереди подбрасывают кубик\index{кубик} до первой шестёрки. 
+Посуду будет мыть тот, кто первым выбросит шестерку. 
+Маша бросает кубик первой.
+
+Какова вероятность того, что посуду будет мыть Маша? 
+Сколько в среднем раз они будут бросать кубик?
 
 \begin{sol}
  $6/11$, $6$
@@ -216,7 +222,7 @@ style=alphabetic]{biblatex}
 
 \begin{problem}
  Вы играете в следующую игру. Кубик подкидывается неограниченное число раз.
- Если на кубике выпадает 1, 2 или 3, то соответствующее количество монет добавляется на кон.
+ Если на кубике\index{кубик} выпадает 1, 2 или 3, то соответствующее количество монет добавляется на кон.
  Если выпадает 4 или 5, то игра оканчивается и Вы получаете сумму, лежащую на кону.
  Если выпадает 6, то игра оканчивается, а Вы не получаете ничего. Изначально на кону лежит ноль рублей.
 \begin{enumerate}
@@ -248,7 +254,9 @@ style=alphabetic]{biblatex}
 \end{problem}
 
 \begin{problem}
- Вася подкидывает кубик до тех пор, пока на кубике не выпадет единица, или пока он сам не скажет «Стоп». Вася получает столько рублей, сколько выпало на кубике при последнем броске. Вася хочет максимизировать свой ожидаемый выигрыш.
+Вася подкидывает кубик\index{кубик} до тех пор, пока на кубике не выпадет единица, или пока он сам не скажет «Стоп». 
+Вася получает столько рублей, сколько выпало на кубике при последнем броске. 
+Вася хочет максимизировать свой ожидаемый выигрыш.
 \begin{enumerate}
 \item Как выглядит оптимальная стратегия? Чему равен ожидаемый выигрыш при использовании оптимальной стратегии?
 \item Какова средняя продолжительность игры при использовании оптимальной стратегии?
@@ -416,12 +424,16 @@ $\P(\{b,c\})=0,7$. Найдите $\P(\{a\})$, $\P(\{b\})$, $\P(\{c\})$
 \begin{sol}
 \end{sol}
 \end{problem}
+
+
 \begin{problem}
  Треугольник с вершинами $(0;0)$, $(2;0)$ и $(1;1)$. Внутри него случайным образом выбирается точка, $X$ -- абсцисса точки. Найдите $\P(X>1)$, $\P(X\in [0.5;1])$, $\E(X)$
 
 \begin{sol}
 \end{sol}
 \end{problem}
+
+
 \begin{problem}
  Треугольник с вершинами $(0;0)$, $(2;0)$ и $(2;1)$. Внутри него случайным образом выбирается точка, $X$ -- абсцисса точки. Найдите $\P(X>1)$, $\P(X\in [0.5;1])$. Что больше, $\E(X)$ или 1?
 
@@ -429,8 +441,10 @@ $\P(\{b,c\})=0,7$. Найдите $\P(\{a\})$, $\P(\{b\})$, $\P(\{c\})$
 \begin{sol}
 \end{sol}
 \end{problem}
+
+
 \begin{problem}
- Исследовательница Мишель подкидывает игральный кубик неограниченное количество раз и складывает выпадающие количества очков.
+Исследовательница Мишель подкидывает игральный кубик\index{кубик} неограниченное количество раз и складывает выпадающие количества очков.
 \begin{enumerate}
 \item Чему примерно равна вероятность того, что однажды сумма в точности будет равна 123456789?
 \item Чему точно равна указанная вероятность?
@@ -439,6 +453,8 @@ $\P(\{b,c\})=0,7$. Найдите $\P(\{a\})$, $\P(\{b\})$, $\P(\{c\})$
 \begin{sol}
 \end{sol}
 \end{problem}
+
+
 \begin{problem}
  Упрямая исследовательница Мишель подбрасывает монетку до тех пор, пока количество орлов не окажется в точности равным удвоенному количеству решек. Монетка выпадает орлом с вероятностью $p$. Какова вероятность того, что Мишель будет подкидывать монетку вечно?
 
@@ -2543,7 +2559,7 @@ $f_{X}(x)=
 \end{problem}
 
 \begin{problem}
- Неправильный кубик выпадает с вероятностью $0{,}5$ шестеркой вверх. Остальные пять граней выпадают равновероятно. Случайная величина $X$ — остаток от деления номера грани на два, $Y$ — остаток от деления номера грани на три. Найдите
+ Неправильный кубик\index{кубик} выпадает с вероятностью $0{,}5$ шестеркой вверх. Остальные пять граней выпадают равновероятно. Случайная величина $X$ — остаток от деления номера грани на два, $Y$ — остаток от деления номера грани на три. Найдите
 \begin{enumerate}
 \item Закон распределения $\E(X\mid Y)$, $\E(Y\mid X)$
 \item Выразите $\E(Y\mid X)$ через $X$, а $\E(X\mid Y)$ через $Y$
@@ -3735,7 +3751,7 @@ $Y_1 \leq Y_2 \leq \ldots \leq Y_{10}$.
 
 
 \begin{problem}
- Исследовательница Мишель подбрасывает кубик $100$ раз. Пусть $X_1$ — количество выпадений единицы, а $X_6$ — количество выпадений шестёрки.
+ Исследовательница Мишель подбрасывает кубик\index{кубик} $100$ раз. Пусть $X_1$ — количество выпадений единицы, а $X_6$ — количество выпадений шестёрки.
 \begin{enumerate}
 \item Как распределена величина $X_1$? Величина $X_6$? Найдите $\E(X_1)$, $\Var(X_1)$.
 \item Верно ли, что величины $X_1$ и $X_6$ независимы? Одинаково распередены?
