--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -993,8 +993,31 @@ X, \text{ если } X\geq a.\\
 В схеме Гёте издателю оптимально декларировать истинную ставку $b^* = V$. 
 Преимущество схемы Гёте в том, что она даёт автору информацию об оценке издателем его труда, 
 оставляя самого издателя в неведении в случае провала сделки. 
+
+В реальности издателю Фивегу удалось узнать сумму, написанную Гёте в конверте. 
 \end{sol}
 \end{problem}
+
+\begin{problem}
+Время безотказной работы пепелаца $T$ равно одному, двум, трём или четырём годам с вероятностями $0.1$, $0.2$, $0.3$ и $0.4$ соответственно. 
+
+\begin{enumerate}
+  \item Нарисуйте график функции дожития $S(t) = \P(T > t)$. 
+  \item Закрасьте на графике ожидаемое время жизни пепелаца, $\E(S)$.
+  \item Как для произвольной неотрицательной случайной величины $X$ связаны ожидание и функция распределения?
+  \item Как для произвольной случайной величины $Y$ связаны ожидание и функция распределения?
+\end{enumerate}
+
+\begin{sol}
+  \begin{enumerate}
+    \item 
+    \item $\E(T) = \int_0^{\infty} S(t) \, dt$.
+    \item $\E(X) = \int_0^{\infty} 1 - F(t) \, dt$.
+    \item 
+  \end{enumerate}
+\end{sol}
+\end{problem}
+
 
 
 
