--- a/title_bor_utf8_knitr.tex
+++ b/title_bor_utf8_knitr.tex
@@ -1,38 +1,13 @@
-%%%%%%%%%%%%%%%%%%%%%%%  Загрузка пакетов  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% кусок от урсса
-%\usepackage[60x90,headers,11pt]{format}
-
-%\textheight=494pt%
-%\textwidth=322pt%
-%
-%\oddsidemargin=0pt%
-%\evensidemargin=0pt
-%\topmargin=-1pt \headsep=14pt \headheight=22pt \voffset=-28pt
-%\hoffset=-50pt
 
 
 \clubpenalty=10000
 \widowpenalty=10000
 
-%\overfullrule=5pt
-%\hfuzz=1.5mm
-%\baselineskip=12pt plus 0.18pt minus 0.1pt
 
-
-%\pagestyle{headings}
-% конец куска от урсса
-
-
-
-% специальная версия для knitr'а. Исключает graphicx
-
-%\usepackage{showkeys} % показывать метки в готовом pdf
 
 \usepackage{etex} % расширение классического tex
 % в частности позволяет подгружать гораздо больше пакетов, чем мы и займёмся далее
 
-%\usepackage{mathtext} % русские буквы в формулах? (и без неё работает)
-% Например, $x_{\text{один}}$
 
 
 \usepackage{verbatim} % для многострочных комментариев
@@ -73,7 +48,6 @@
 
 \usepackage{xcolor}
 
-% \usepackage[pdftex]{graphicx} % для вставки графики, убрано, т.к. knitr похоже сам добавляет
 
 \usepackage{float, longtable}
 \usepackage{soulutf8}
@@ -84,8 +58,6 @@
 \usepackage{mathtools}
 \usepackage{cancel, xspace} % sudo yum install texlive-cancel
 
-% \usepackage{minted} % display program code with syntax highlighting
-% требует установки pygments и python
 
 \usepackage{numprint} % sudo yum install texlive-numprint
 \npthousandsep{,}\npthousandthpartsep{}\npdecimalsign{.}
@@ -133,20 +105,6 @@
 \setlist[enumerate, 2]{label=\asbuk*),ref=\asbuk*}
 
 
-%\usepackage{asymptote} % пакет для рисовки графики, должен идти после graphics
-% но мы переходим на tikz :)
-
-%\usepackage{sagetex} % для интеграции с Sage (вероятно тоже должен идти после graphics)
-
-% metapost создает упрощенные eps файлы, которые можно напрямую включать в pdf
-% эта группа команд декларирует, что файлы будут этого упрощенного формата
-% если metapost не используется, то этот блок не нужен
-\usepackage{ifpdf} % для определения, запускается ли pdflatex или просто латех
-\ifpdf
-	\DeclareGraphicsRule{*}{mps}{*}{}
-\fi
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 
 
 
@@ -173,47 +131,16 @@
   \end{center}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%% Правила переноса  слов
-\hyphenation{ }
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \emergencystretch=2em
 
 
-% DEFS
-\def \mbf{\mathbf}
-\def \msf{\mathsf}
-\def \mbb{\mathbb}
-\def \tbf{\textbf}
-\def \tsf{\textsf}
-\def \ttt{\texttt}
-\def \tbb{\textbb}
-
-\def \wh{\widehat}
-\def \wt{\widetilde}
-\def \ni{\noindent}
-\def \ol{\overline}
-\def \cd{\cdot}
-\def \fr{\frac}
-\def \bs{\backslash}
-\def \lims{\limits}
-\DeclareMathOperator{\dist}{dist}
-\DeclareMathOperator{\VC}{VCdim}
 \DeclareMathOperator{\card}{card}
 \DeclareMathOperator{\sign}{sign}
 \DeclareMathOperator{\sgn}{sign}
-\DeclareMathOperator{\Tr}{\mbf{Tr}}
-\DeclareMathOperator{\tr}{tr}
 
-
-\def \xfs{(x_1,\ldots,x_{n-1})}
 \DeclareMathOperator*{\argmin}{arg\,min}
 \DeclareMathOperator*{\amn}{arg\,min}
 \DeclareMathOperator*{\amx}{arg\,max}
-\DeclareMathOperator{\trace}{tr}
-\DeclareMathOperator{\rk}{rk}
 
 
 \DeclareMathOperator{\Corr}{Corr}
@@ -223,194 +150,20 @@
 
 \DeclareMathOperator{\Cov}{Cov}
 \DeclareMathOperator{\Var}{Var}
-\DeclareMathOperator{\corr}{Corr}
 \DeclareMathOperator{\cov}{Cov}
-\DeclareMathOperator{\var}{Var}
-\DeclareMathOperator{\bin}{Bin}
 \DeclareMathOperator{\Bin}{Bin}
-\DeclareMathOperator{\rang}{rang}
 \DeclareMathOperator*{\plim}{plim}
 \DeclareMathOperator{\MSE}{MSE}
 
-\newcommand{\norm}[1]{\left\lVert#1\right\rVert}
-
-\providecommand{\iff}{\Leftrightarrow}
-\providecommand{\hence}{\Rightarrow}
-
-\def \ti{\tilde}
-\def \wti{\widetilde}
-
-\def \mA{\mathcal{A}}
-\def \mB{\mathcal{B}}
-\def \mC{\mathcal{C}}
-\def \mE{\mathcal{E}}
-\def \mF{\mathcal{F}}
-\def \mH{\mathcal{H}}
-\def \mL{\mathcal{L}}
-\def \mN{\mathcal{N}}
-\def \mU{\mathcal{U}}
-\def \mV{\mathcal{V}}
-\def \mW{\mathcal{W}}
-
-
-\def \R{\mbb R}
-\def \N{\mbb N}
-\def \Z{\mbb Z}
-\def \P{\mbb{P}}
-\def \p{\mbb{P}}
+\renewcommand{\P}{\mathbb{P}}
 \newcommand{\E}{\mathbb{E}}
-\def \D{\msf{D}}
-\def \I{\mbf{I}}
 
-\def \QQ{\mbb Q}
-\def \RR{\mbb R}
-\def \NN{\mbb N}
-\def \ZZ{\mbb Z}
-\def \PP{\mbb P}
-
-
-\def \a{\alpha}
-\def \b{\beta}
-\def \t{\tau}
-\def \dt{\delta}
 \newcommand{\e}{\varepsilon}
-\def \ga{\gamma}
-\def \kp{\varkappa}
-\def \la{\lambda}
-\def \sg{\sigma}
-\def \sgm{\sigma}
-\def \tt{\theta}
-\def \ve{\varepsilon}
-\def \Dt{\Delta}
-\def \La{\Lambda}
-\def \Sgm{\Sigma}
-\def \Sg{\Sigma}
-\def \Tt{\Theta}
-\def \Om{\Omega}
-\def \om{\omega}
 
-%\newcommand{\p}{\partial}
-
-\def \ni{\noindent}
-\def \lq{\glqq}
-\def \rq{\grqq}
-\def \lbr{\linebreak}
-\def \vsi{\vspace{0.1cm}}
-\def \vsii{\vspace{0.2cm}}
-\def \vsiii{\vspace{0.3cm}}
-\def \vsiv{\vspace{0.4cm}}
-\def \vsv{\vspace{0.5cm}}
-\def \vsvi{\vspace{0.6cm}}
-\def \vsvii{\vspace{0.7cm}}
-\def \vsviii{\vspace{0.8cm}}
-\def \vsix{\vspace{0.9cm}}
-\def \VSI{\vspace{1cm}}
-\def \VSII{\vspace{2cm}}
-\def \VSIII{\vspace{3cm}}
-
-\newcommand{\bls}[1]{\boldsymbol{#1}}
-\newcommand{\bsA}{\boldsymbol{A}}
-\newcommand{\bsH}{\boldsymbol{H}}
-\newcommand{\bsI}{\boldsymbol{I}}
-\newcommand{\bsP}{\boldsymbol{P}}
-\newcommand{\bsR}{\boldsymbol{R}}
-\newcommand{\bsS}{\boldsymbol{S}}
-\newcommand{\bsX}{\boldsymbol{X}}
-\newcommand{\bsY}{\boldsymbol{Y}}
-\newcommand{\bsZ}{\boldsymbol{Z}}
-\newcommand{\bse}{\boldsymbol{e}}
-\newcommand{\bsq}{\boldsymbol{q}}
-\newcommand{\bsy}{\boldsymbol{y}}
-\newcommand{\bsbeta}{\boldsymbol{\beta}}
-\newcommand{\fish}{\mathrm{F}}
-\newcommand{\Fish}{\mathrm{F}}
-\renewcommand{\phi}{\varphi}
-\newcommand{\ind}{\mathds{1}}
-\newcommand{\inds}[1]{\mathds{1}_{\{#1\}}}
-\renewcommand{\to}{\rightarrow}
-\newcommand{\sumin}{\sum\limits_{i=1}^n}
-\newcommand{\ofbr}[1]{\bigl( \{ #1 \} \bigr)}     % Например, вероятность события. Большие круглые, нормальные фигурные скобки вокруг аргумента
-\newcommand{\Ofbr}[1]{\Bigl( \bigl\{ #1 \bigr\} \Bigr)} % Например, вероятность события. Больше больших круглые, большие фигурные скобки вокруг аргумента
-\newcommand{\oeq}{{}\textcircled{\raisebox{-0.4pt}{{}={}}}{}} % Равно в кружке
-\newcommand{\og}{\textcircled{\raisebox{-0.4pt}{>}}}  % Знак больше в кружке
+\newcommand{\cN}{\mathcal{N}}
 
 % вместо горизонтальной делаем косую черточку в нестрогих неравенствах
 \renewcommand{\le}{\leqslant}
 \renewcommand{\ge}{\geqslant}
 \renewcommand{\leq}{\leqslant}
 \renewcommand{\geq}{\geqslant}
-
-
-\newcommand{\figb}[1]{\bigl\{ #1  \bigr\}} % большие фигурные скобки вокруг аргумента
-\newcommand{\figB}[1]{\Bigl\{ #1  \Bigr\}} % Больше больших фигурные скобки вокруг аргумента
-\newcommand{\parb}[1]{\bigl( #1  \bigr)}   % большие скобки вокруг аргумента
-\newcommand{\parB}[1]{\Bigl( #1  \Bigr)}   % Больше больших круглые скобки вокруг аргумента
-\newcommand{\parbb}[1]{\biggl( #1  \biggr)} % большие-большие круглые скобки вокруг аргумента
-\newcommand{\br}[1]{\left( #1  \right)}    % круглые скобки, подгоняемые по размеру аргумента
-\newcommand{\fbr}[1]{\left\{ #1  \right\}} % фигурные скобки, подгоняемые по размеру аргумента
-\newcommand{\eqdef}{\mathrel{\stackrel{\rm def}=}} % знак равно по определению
-\newcommand{\const}{\mathrm{const}}        % const прямым начертанием
-\newcommand{\zdt}[1]{\textit{#1}}
-\newcommand{\ENG}[1]{\foreignlanguage{british}{#1}}
-\newcommand{\ENGs}{\selectlanguage{british}}
-\newcommand{\RUSs}{\selectlanguage{russian}}
-\newcommand{\iid}{\text{i.\hspace{1pt}i.\hspace{1pt}d.}}
-
-\newdimen\theoremskip
-\theoremskip=0pt
-\newenvironment{note}{\par\vskip\theoremskip\textbf{Замечание.\xspace}}{\par\vskip\theoremskip}
-\newenvironment{hint}{\par\vskip\theoremskip\textbf{Подсказка.\xspace}}{\par\vskip\theoremskip}
-\newenvironment{ist}{\par\vskip\theoremskip Источник:\xspace}{\par\vskip\theoremskip}
-
-\newcommand*{\tabvrulel}[1]{\multicolumn{1}{|c}{#1}}
-\newcommand*{\tabvruler}[1]{\multicolumn{1}{c|}{#1}}
-
-\newcommand{\II}{{\fontencoding{X2}\selectfont\CYRII}}   % I десятеричное (английская i неуместна)
-\newcommand{\ii}{{\fontencoding{X2}\selectfont\cyrii}}   % i десятеричное
-\newcommand{\EE}{{\fontencoding{X2}\selectfont\CYRYAT}}  % ЯТЬ
-\newcommand{\ee}{{\fontencoding{X2}\selectfont\cyryat}}  % ять
-\newcommand{\FF}{{\fontencoding{X2}\selectfont\CYROTLD}} % ФИТА
-\newcommand{\ff}{{\fontencoding{X2}\selectfont\cyrotld}} % фита
-\newcommand{\YY}{{\fontencoding{X2}\selectfont\CYRIZH}}  % ИЖИЦА
-\newcommand{\yy}{{\fontencoding{X2}\selectfont\cyrizh}}  % ижица
-
-%%%%%%%%%%%%%%%%%%%%% Определение разрядки разреженного текста и задание красивых многоточий
-\sodef\so{}{.15em}{1em plus1em}{.3em plus.05em minus.05em}
-\newcommand{\ldotst}{\so{...}}
-\newcommand{\ldotsq}{\so{?\hbox{\hspace{-0.61ex}}..}}
-\newcommand{\ldotse}{\so{!..}}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Команда для переноса символов бинарных операций
-\def\hm#1{#1\nobreak\discretionary{}{\hbox{$#1$}}{}}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%\setlist[enumerate,1]{label=\arabic*., ref=\arabic*, partopsep=0pt plus 2pt, topsep=0pt plus 1.5pt,itemsep=0pt plus .5pt,parsep=0pt plus .5pt}
-%\setlist[itemize,1]{partopsep=0pt plus 2pt, topsep=0pt plus 1.5pt,itemsep=0pt plus .5pt,parsep=0pt plus .5pt}
-
-% Эти парни затем, если вдруг не захочется управлять списками из-под уютненького enumitem
-% или если будет жизненно важно, чтобы в списках были именно русские буквы.
-%\setlength{\partopsep}{0pt plus 3pt}
-%\setlength{\topsep}{0pt plus 2pt}
-%\setlength{\itemsep}{0 plus 1pt}
-%\setlength{\parsep}{0 plus 1pt}
-
-%на всякий случай пока есть
-%теоремы без нумерации и имени
-%\newtheorem*{theor}{Теорема}
-
-%"Определения","Замечания"
-%и "Гипотезы" не нумеруются
-%\newtheorem*{defin}{Определение}
-%\newtheorem*{rem}{Замечание}
-%\newtheorem*{conj}{Гипотеза}
-
-%"Теоремы" и "Леммы" нумеруются
-%по главам и согласованно м/у собой
-%\newtheorem{theorem}{Теорема}
-%\newtheorem{lemma}[theorem]{Лемма}
-
-% Утверждения нумеруются по главам
-% независимо от Лемм и Теорем
-%\newtheorem{prop}{Утверждение}
-%\newtheorem{cor}{Следствие}
