--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1908,7 +1908,21 @@ $\Corr(X,Y)=1$, $\Corr(X,Z)=-1$
 
 Какие проблемы есть у кувариации и курреляции?
   \begin{sol}
- Кувариация не существует для экспериментов с тремя и более исходами, а курреляция всегда равна нулю. 
+ Кувариация не существует для экспериментов с тремя и более исходами, а курреляция всегда равна нулю.
+ 
+ Почему не существует кувариация?
+
+ На эксперименте с тремя исходами введём индикаторы каждого из исходов, $X$, $Y$, $Z$.
+
+ Рассмотрим функцию $g(a, b, c) =\mathrm{Cuv}(aX +bY +cZ, Z)$.
+ 
+Функция $g$ непрерывна в силу линейности. При этом $g(-1, 0, 1) = -g(1, 0, -1) \neq 0$.
+
+Плавно двигаемся из $g(-1, 0, 1)$ в $g(1, 0, 1)$ и ни разу не пересекаем ноль. 
+
+Плавно двигаемся из $g(1, 0, 1)$ в $g(1, 0, -1)$ и ни разу не пересекаем ноль. 
+
+А знак сменился, противоречие. 
  \end{sol}
  \end{problem}
  
