max lik + mcmc problems

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1,3 +1,8 @@
+% arara: xelatex: {shell: yes}
+% arara: biber
+% arara: xelatex: {shell: yes}
+% arara: xelatex: {shell: yes}
+
 %!TeX cleanPatterns = $OUTDIR/$JOB!($OUTEXT|.synctex.gz|.tex|.pdf), /$OUTDIR/_minted-$JOB/
 \documentclass[12pt, a4paper]{article}
 
@@ -4806,8 +4811,29 @@ $\gamma = a$, $\beta = 1/\Var(\ell')$, $\E(u)=0$, $\Cov(u, \ell')=0$,
 \end{problem}
 
 
+\begin{problem}
+Для анализа возьмём данные по распределению количества мальчиков в семьях с 12-ю детьми в Саксонии в 
+19-м веке, 
 
+\url{https://github.com/vincentarelbundock/Rdatasets/raw/master/csv/vcd/Saxony.csv}.
 
+\begin{enumerate}
+  \item Нарисуйте симпатичную гистограммку. Сколько всего семей в наборе данных?
+  \item Предположим, что количества мальчиков в каждой семье распределены биномиально 
+  и независимо с общим параметром $p$.
+  Оцените параметр $p$ методом максимального правдопдобия.
+  \item Предположим, что вероятности рождения мальчика в каждой семье 
+  имеют бета распределение с параметрами $a$ и $b$ и независимы.  
+  Оцените параметры $a$ и $b$ методом максимального правдопдобия.
+  \item Постройте 99\%-е доверительные интервалы для оценённых параметров. 
+  \item В рамках двух оценённых моделей постройте 99\%-й доверительный интервал 
+  для вероятности рождения ровно 6 мальчиков в семье с 12-ю детьми. 
+\end{enumerate}
+
+\begin{sol}
+
+\end{sol}
+\end{problem}
 
 
 
@@ -6228,6 +6254,47 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 
 \begin{sol}
 \end{sol}
+
+\end{problem}
+  
+
+
+\section{MCMC}
+
+Изначально Курочки Ку, Ро и Чка стоят в точке $x=1$. 
+Каждая курочка перемещается по следующему алгоритму независимо от других.
+
+Для начала курочка подбрасывает монетку. Если выпадает решка, то это означает 
+\textit{намерение} пойти на один шаг направо, если орёл — \textit{намерение} пойти на один шаг налево. 
+Обозначим текущую точку $x_{now}$, а точку \textit{намерения} — $x_{prop}$.
+
+Затем курочка считает отношение $a = p(x_{prop}) / p(x_{now})$.
+\begin{problem}
+  \[
+  p(x) = \begin{cases}
+   0.1x, \text{ при } x \in \{1, 2, 3, 4\} \\
+   0, \text{ иначе.}
+  \end{cases}
+\]
+Если $a \geq 1$, то курочка гарантированно отправляется туда, куда намеревалась. 
+Если $a < 1$, то курочка отправляется туда, куда намеревалась с вероятностью $a$, 
+а с вероятностью $(1 - a)$ отказывается от намерения. 
+Затем курочка снова подбрасывает монетку и так далее до бесконечности. 
+
+После осуществления намерения или отказа от него, Ку откладывает одно яйцо в точку, где находится.
+Курочка Ро откладывает яйца только после того, как совершит успешное перемещение. 
+Курочка Чка откладывает яйца только после того, как откажется от намерения перемещаться. 
+
+\begin{enumerate}
+  \item Нарисуйте функцию $p(x)$.
+  \item Как в долгосрочном периоде распределятся яйца, отложенные Ку?
+  \item Как в долгосрочном периоде распределятся яйца, отложенные Ро?
+  \item Как в долгосрочном периоде распределятся яйца, отложенные Чка?
+\end{enumerate}
+
+
+  \begin{sol}
+  \end{sol}
 
 \end{problem}
   
