two problems for n selection

--- a/probability_pro.bib
+++ b/probability_pro.bib
@@ -235,3 +235,15 @@
   url={http://www3.math.tu-berlin.de/combi/wp_henk/wp-content/uploads/2011/05/Welzl-Grams-equation-a-probabilistic.pdf},
   publisher={Springer}
 }
+
+
+
+@article{serdar2021sample,
+  title={Sample size, power and effect size revisited: simplified and practical approaches in pre-clinical, clinical and laboratory studies},
+  author={Serdar, Ceyhan Ceran and Cihan, Murat and Y{\"u}cel, Do{\u{g}}an and Serdar, Muhittin A},
+  journal={Biochemia Medica},
+  volume={31},
+  number={1},
+  pages={27--53},
+  year={2021}
+}
