--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -4822,18 +4822,43 @@ $\gamma = a$, $\beta = 1/\Var(\ell')$, $\E(u)=0$, $\Cov(u, \ell')=0$,
   \item Предположим, что количества мальчиков в каждой семье распределены биномиально 
   и независимо с общим параметром $p$.
   Оцените параметр $p$ методом максимального правдопдобия.
-  \item Предположим, что вероятности рождения мальчика в каждой семье 
-  имеют бета распределение с параметрами $a$ и $b$ и независимы.  
-  Оцените параметры $a$ и $b$ методом максимального правдопдобия.
-  \item Постройте 99\%-е доверительные интервалы для оценённых параметров. 
-  \item В рамках двух оценённых моделей постройте 99\%-й доверительный интервал 
+  \item Постройте 99\%-е доверительный интервал для $p$. 
+  \item Постройте 99\%-й доверительный интервал 
   для вероятности рождения ровно 6 мальчиков в семье с 12-ю детьми. 
+  \item Сравните табличкой фактические частоты и прогнозируемые вероятности 
+  для каждого количества детей. 
 \end{enumerate}
 
 \begin{sol}
 
 \end{sol}
 \end{problem}
+
+
+\begin{problem}
+  Для анализа возьмём данные по распределению количества мальчиков в семьях с 12-ю детьми в Саксонии в 
+  19-м веке, 
+  
+  \url{https://github.com/vincentarelbundock/Rdatasets/raw/master/csv/vcd/Saxony.csv}.
+  
+  \begin{enumerate}
+    \item Нарисуйте симпатичную гистограммку. Сколько всего семей в наборе данных?
+    \item Предположим, что вероятности рождения мальчика в каждой семье 
+    имеют бета распределение с параметрами $a$ и $b$ и независимы.  
+    Оцените параметры $a$ и $b$ методом максимального правдопдобия.
+    \item Постройте 99\%-е доверительные интервалы для оценённых параметров. 
+    \item Постройте 99\%-й доверительный интервал 
+    для вероятности рождения ровно 6 мальчиков в семье с 12-ю детьми. 
+    \item Сравните табличкой фактические частоты и прогнозируемые вероятности 
+    для каждого количества детей.   
+  \end{enumerate}
+  
+  \begin{sol}
+  
+  \end{sol}
+\end{problem}
+  
+
 
 
 
@@ -5538,6 +5563,77 @@ x_1 + x_2, \text{ если } x_1, x_2 \in [0;1]; \\
 \end{sol}
 \end{problem}
   
+
+\subsection{Поиск оптимального $n$}
+
+\begin{problem}
+  У исследователя Пантелеймона $n$ независимых наблюдений. Пантелеймон хочет 
+  поделить эти $n$ наблюдений на экспериментальную (t, treatment) и контрольную группу (c, control), 
+  чтобы измерить эффект воздействия, $\mu_t - \mu_c$. 
+
+  Дисперсия каждого наблюдения в контрольной группе равна $\sigma^2_c$, 
+  а в экспериментальной — $\sigma^2_t$.
+
+  Для упрощения будем считать, что дисперсии известны. 
+
+  В каких пропорциях нужно разделить имеющиеся наблюдения?
+\begin{sol}
+\end{sol}
+\end{problem}
+  
+\begin{problem}
+Исследователь Пантелеймон разбил наблюдения на две группы, 
+экспериментальную (t, treatment) и контрольную (c, control), по $n$ наблюдений в каждой. 
+
+Наблюдения независимы, а дисперсия наблюдений одинакова и равна $\sigma^2$. 
+
+Пантелеймон проверяет гипотезу $H_0$: $\mu_t - \mu_c = 0$ против 
+$H_a$: $\mu_t - \mu_c \neq 0$.
+
+Пантелеймон хочет, чтобы вероятность ошибки первого рода равнялась $\alpha$, 
+а вероятность ошибки второго рода была равна $\beta$ при величине эффекта равной 
+$\mu_t - \mu_c = MDE > 0$. 
+Сокращение $MDE$ расшифровывается как minimal detectable effect, минимальные детектируемый эффект. 
+
+\begin{enumerate}
+  \item Какое $n$ надо выбрать Пантелеймону?
+  \item Как изменится ответ, 
+  если размер контрольной группы в $r > 1$ раз больше, чем размер экспериментальной?
+  В данном случае за $n$ обозначим размер наименьшей из групп. 
+\end{enumerate}
+  
+
+Почитать: \autocite{serdar2021sample} — обзор способов нахождения размера выборки.
+
+\begin{sol}
+  Из условия на вероятность ошибки первого рода критическое значение
+  для $(\hat\mu_t - \hat\mu_c - 0) / se(\hat\mu_t - \hat\mu_c )$   
+  равно $Z_{1-\alpha/2}$.
+
+  В масштабе разницы средних критическое значение принимает вид:
+  \[
+  Z_{1-\alpha/2} se(\hat\mu_t - \hat\mu_c ).
+  \]
+  Обеспечиваем заданную вероятность ошибки второго рода:
+  \[
+    \P( \hat\mu_t - \hat\mu_c < Z_{1-\alpha/2} se(\hat\mu_t - \hat\mu_c) \mid H_a).
+  \]
+  После стандартизации получаем равенство:
+  \[
+  Z_{\beta} =   Z_{1-\alpha/2} - MDE / se(\hat\mu_t - \hat\mu_c).
+  \]
+  Выражаем $n$:
+  \[
+  n = \frac{2\sigma^2 (Z_{1-\alpha/2} + Z_{1 - \beta})^2}{MDE^2}.
+  \]
+
+  В общем случае вместо $2$ будет $(r + 1) / r$.
+\end{sol}
+\end{problem}
+
+
+
+
 
 %\end{comment}
 
