--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1792,7 +1792,7 @@ $Y=4$ & 0.2 & 0.1 & 0.1  \\
 \end{tabular}
 
 
-Найдите: $\Var(X)$, $\Var(Y)$, $\Cov(X,Y)$, $\Corr(X,Y)$, $\Cov(X,Y|X\geq 0)$
+Найдите: $\Var(X)$, $\Var(Y)$, $\Cov(X,Y)$, $\Corr(X,Y)$, $\Cov(X,Y|X\geq 0)$.
 
 \begin{sol}
 \end{sol}
@@ -1802,7 +1802,7 @@ $Y=4$ & 0.2 & 0.1 & 0.1  \\
 \begin{problem}
  Кубик подбрасывается два раза, $X$ — сумма очков, $Y$ — разность очков, число при
 первом броске минус число при втором. Найдите $\E(XY)$, $\Cov(X,Y)$,
-$\Corr(X,Y)$
+$\Corr(X,Y)$.
 
 \begin{sol}
 \end{sol}
@@ -1840,7 +1840,7 @@ $\Corr(X,Y)$
 
 Найдите $\Corr(X_{1},X_{6})$.
 
-Подсказка: $\Cov(X_{1},X_{1}+ \ldots +X_{6})= \ldots$
+Подсказка: $\Cov(X_{1},X_{1}+ \ldots +X_{6})= \ldots$.
 
 \begin{sol}
   $-1/5$
@@ -1872,7 +1872,7 @@ $\Corr(X,Y)$
 \subsection{Свойства ковариаций и корреляций}
 
 \begin{problem}
- Известно, что $Y=2X-3$, а $Z=6-3X$. Найдите $\Corr(X,Y)$, $\Corr(X,Z)$
+ Известно, что $Y=2X-3$, а $Z=6-3X$. Найдите $\Corr(X,Y)$, $\Corr(X,Z)$.
 
 \begin{sol}
 $\Corr(X,Y)=1$, $\Corr(X,Z)=-1$
@@ -1885,8 +1885,8 @@ $\Corr(X,Y)=1$, $\Corr(X,Z)=-1$
 \begin{problem}
  Пусть $X$ и $Y$ независимы.
 \begin{enumerate}
-\item Найдите $\Cov(X,Y)$, $\Cov(X^{3},Y^{2}-5Y)$, $\Corr(X,Y)$
-\item Выразите $\Var(X+Y)$ и $\Var(X-Y)$ через $\Var(X)$ и $\Var(Y)$
+\item Найдите $\Cov(X,Y)$, $\Cov(X^{3},Y^{2}-5Y)$, $\Corr(X,Y)$.
+\item Выразите $\Var(X+Y)$ и $\Var(X-Y)$ через $\Var(X)$ и $\Var(Y)$.
 \end{enumerate}
 
 \begin{sol}
@@ -1989,12 +1989,12 @@ $\Corr(X,Y)=1$, $\Corr(X,Z)=-1$
  На первом шаге значение $X$ выбирается случайно равномерно на отрезке $[0;1]$. На втором шаге значение $Y$ выбирается случайно и равномерно от $0$ до получившегося $X$.
 
 \begin{enumerate}
-\item Найдите функции плотности $f(y|x)$, $f(x)$, $f(x,y)$, $f(x|y)$, $f(y)$
-\item Найдите $\E(X)$, $\E(Y)$, $\E(X^2)$, $\E(Y^2)$
-\item Найдите $\Var(X)$, $\Var(Y)$, $\Cov(X,Y)$, $\Corr(X,Y)$
-\item Найдите $\E(X|Y)$, $\E(Y|X)$, $\E(X^2|Y)$, $\E(Y^2|X)$
-\item Найдите $\Var(Y|X)$, $\Var(X|Y)$
-\item Найдите $\P(Y>0.2 | X=0.5)$, $\P(Y>0.2 | X<0.5)$
+\item Найдите функции плотности $f(y|x)$, $f(x)$, $f(x,y)$, $f(x|y)$, $f(y)$.
+\item Найдите $\E(X)$, $\E(Y)$, $\E(X^2)$, $\E(Y^2)$.
+\item Найдите $\Var(X)$, $\Var(Y)$, $\Cov(X,Y)$, $\Corr(X,Y)$.
+\item Найдите $\E(X|Y)$, $\E(Y|X)$, $\E(X^2|Y)$, $\E(Y^2|X)$.
+\item Найдите $\Var(Y|X)$, $\Var(X|Y)$.
+\item Найдите $\P(Y>0.2 | X=0.5)$, $\P(Y>0.2 | X<0.5)$.
 \end{enumerate}
 
 \begin{sol}
@@ -2006,13 +2006,13 @@ $\Corr(X,Y)=1$, $\Corr(X,Z)=-1$
 \begin{problem}
  Величины $Y_1$ и $Y_2$ независимы и экспоненциально распределены с параметром $\lambda = 5$, а $S=Y_1 + Y_2$ и $R=Y_1/S$.
 \begin{enumerate}
-\item Выпишите и нарисуйте функцию плотности $f(y_1)$
-\item Найдите совместную функцию плотности $f(y_1, y_2)$
+\item Выпишите и нарисуйте функцию плотности $f(y_1)$.
+\item Найдите совместную функцию плотности $f(y_1, y_2)$.
 \item Найдите совместную функцию плотности $R$ и $S$.
 \item Правда ли, что $R$ и $S$ независимы?
 \item Найдите плотности $f(y_1, s)$, $f(y_1 | s)$.
 \item Правда ли, что $Y_1$ и $S$ независимы?
-\item Прокомментируйте простыми словами вид функции $f(y_1 | s)$
+\item Прокомментируйте простыми словами вид функции $f(y_1 | s)$.
 \end{enumerate}
 
 \begin{sol}
@@ -2031,11 +2031,11 @@ f(x,y)=\begin{cases}
 \]
 
 \begin{enumerate}
-\item Найдите $\P(X>0.5)$, $\P(X+Y>0.5)$, $\P(X=Y+0.2)$, $\P(X\leq Y)$, $\P(Y>0.5|X>0.5)$
-\item Найдите $\E(X)$, $\E(XY)$, $\Cov(X,Y)$, $\Corr(X,Y)$
-\item Найдите $\E(Y|X)$, $\E(Y^2|X)$, $\Var(Y|X)$
+\item Найдите $\P(X>0.5)$, $\P(X+Y>0.5)$, $\P(X=Y+0.2)$, $\P(X\leq Y)$, $\P(Y>0.5|X>0.5)$.
+\item Найдите $\E(X)$, $\E(XY)$, $\Cov(X,Y)$, $\Corr(X,Y)$.
+\item Найдите $\E(Y|X)$, $\E(Y^2|X)$, $\Var(Y|X)$.
 \item Зависимы ли величины $X$ и $Y$?
-\item Найдите совместную функцию распределения $F(x,y)$
+\item Найдите совместную функцию распределения $F(x,y)$.
 \end{enumerate}
 
 \begin{sol}
@@ -2055,10 +2055,10 @@ F(x,y)=\begin{cases}
 
 \begin{enumerate}
 \item Найдите $\P(X>0.5)$, $\P(X=Y+0.2)$,  $\P(Y>0.5|X>0.5)$;
-\item Найдите частные функции распределения $F(x)$, $F(y)$
+\item Найдите частные функции распределения $F(x)$, $F(y)$.
 \item Найдите совместную функцию плотности $f(x,y)$;
 \item Найдите $\P(X+Y>0.5)$, $\P(X\leq Y)$;
-\item Найдите $\E(X)$, $\E(XY)$, $\Cov(X,Y)$, $\Corr(X,Y)$
+\item Найдите $\E(X)$, $\E(XY)$, $\Cov(X,Y)$, $\Corr(X,Y)$.
 \item Зависимы ли величины $X$ и $Y$?
 \end{enumerate}
 
@@ -2086,7 +2086,8 @@ F(x,y)=\begin{cases}
 
 
 \begin{problem}
- Приведите пример пары $X$ и $Y$ у которой нет совместной функции плотности, однако $X$ и $Y$ равномерно распределены на отрезке $[0;1]$
+ Приведите пример пары $X$ и $Y$ у которой нет совместной функции плотности, 
+ однако $X$ и $Y$ равномерно распределены на отрезке $[0;1]$.
 \begin{sol}
   Например, $X\sim U[0;1]$ и $Y=X$
 \end{sol}
@@ -2094,7 +2095,7 @@ F(x,y)=\begin{cases}
 
 
 \begin{problem}
- Пусть  $X$  равномерно на $[-1;1]$, $Y=X^{2}$
+Величина  $X$  равномерно распределена на $[-1;1]$ и $Y=X^{2}$.
 \begin{enumerate}
 \item Найдите  $\Cov(X,Y)$;
 \item Верно ли, что $X$ и $Y$ независимы?
@@ -2109,13 +2110,15 @@ F(x,y)=\begin{cases}
 
 
 \begin{problem}
- Кольцо задавается системой неравенств: $x^{2}+y^{2}\geq 1$ и $x^{2}+y^{2}\le 4$. Случайным образом, равномерно на этом кольце, выбирается точка, $X$ и $Y$ — её координаты.
+ Кольцо задавается системой неравенств: $x^{2}+y^{2}\geq 1$ и $x^{2}+y^{2}\le 4$. 
+ Случайным образом, равномерно на этом кольце, выбирается точка, $X$ и $Y$ — её координаты.
 
 Чему равна корреляция $X$ и $Y$? Зависимы ли $X$ и $Y$?
 
 
 \begin{sol}
-  корреляция равна $0$, зависимы, так как знание $X$ несёт информацию об $Y$, например, при $X=0$ можно утверждать, что $|Y| \in [1;2]$.
+  Корреляция равна $0$, зависимы, так как знание $X$ несёт информацию об $Y$, 
+  например, при $X=0$ можно утверждать, что $|Y| \in [1;2]$.
 \end{sol}
 \end{problem}
 
@@ -2125,12 +2128,12 @@ F(x,y)=\begin{cases}
 \[
 f(x, y) = \begin{cases}
 4xy, \text{ если } x, y \in [0;1];\\
-0, \text{ иначе }
+0, \text{ иначе. }
 \end{cases}
 \]
 
 \begin{enumerate}
-\item Выпишите дифференциальную форму вероятностей для пары $X$ и $Y$
+\item Выпишите дифференциальную форму вероятностей для пары $X$ и $Y$.
 \item Найдите дифференциальную форму для $S = X+Y$ и $R = X/(X + Y)$.
 \item Найдите совместную функцию плотности для $S = X+Y$ и $R = X/(X + Y)$.
 \end{enumerate}
@@ -2139,11 +2142,13 @@ f(x, y) = \begin{cases}
 \end{problem}
 
 \begin{problem}
-Величины $U_1$ и $U_2$ независимы и равномерны $U[0;1]$. Рассмотрим пару величин $Y_1 = R\cdot \cos \alpha$, $Y_2 = R\cdot \sin \alpha$, где $R=\sqrt{-2\ln U_1}$, а $\alpha = 2\pi U_2$.
+Величины $U_1$ и $U_2$ независимы и равномерны $U[0;1]$. 
+Рассмотрим пару величин $Y_1 = R\cdot \cos \alpha$, $Y_2 = R\cdot \sin \alpha$, 
+где $R=\sqrt{-2\ln U_1}$, а $\alpha = 2\pi U_2$.
 
 \begin{enumerate}
-\item Выпишите дифференциальную форму для пары $U_1$, $U_2$
-\item Выпишите дифференциальную форму для пары $Y_1$, $Y_2$
+\item Выпишите дифференциальную форму для пары $U_1$, $U_2$.
+\item Выпишите дифференциальную форму для пары $Y_1$, $Y_2$.
 \item Найдите совместный закон распределения $Y_1$ и $Y_2$;
 \item Верно ли, что $Y_1$ и $Y_2$ независимы?
 \item Как распределены $Y_1$ и $Y_2$ по отдельности?
@@ -2155,7 +2160,8 @@ f(x, y) = \begin{cases}
 
 
 \begin{problem}
-В Пуассоновском потоке с интенсивностью $\lambda$ время наступления $k$-го события распределено согласно гамма-распределению $Gamma(k, \lambda)$ и имеет вероятностную дифференциальную форму
+В Пуассоновском потоке с интенсивностью $\lambda$ время наступления $k$-го события распределено согласно гамма-распределению $Gamma(k, \lambda)$ 
+и имеет вероятностную дифференциальную форму
 
 \[
 \P(Y \in [y; y+dy]) = const \cdot y^{k-1} \cdot \exp(-\lambda y) \, dy, \text{ при } y\geq 0;
@@ -2164,10 +2170,10 @@ f(x, y) = \begin{cases}
 До прихода Ёжика Медвежонок сидел на крылечке один и насчитал $k_1$ падающую звезду. А после прихода Ёжика Медвежонок насчитал ещё $k_2$ падающих звёзд. Пусть $Y_1$ и $Y_2$ — время, которое которое наблюдал за звёздами Медвежонок до и после прихода Ёжика.
 
 \begin{enumerate}
-\item Выпишите совместную дифференциальную форму для $Y_1$ и $Y_2$
+\item Выпишите совместную дифференциальную форму для $Y_1$ и $Y_2$.
 \item Найдите совместную дифференциальную форму для $S=Y_1 + Y_2$ и $Z=Y_1/S$.
 \item С точностью до сомножителя выпишите дифференциальную форму для доли времени, в течение которого Медвежонок наблюдал звёзды один.
-\item Выпишите функцию плотности бета-распределения
+\item Выпишите функцию плотности бета-распределения.
 \end{enumerate}
 \begin{sol}
 \end{sol}
@@ -2175,14 +2181,15 @@ f(x, y) = \begin{cases}
 
 
 \begin{problem}
-Случайным образом на сфере $x^2+y^2+z^2=1$ равномерно выбирается точка. Её координаты — случайные величины $X$, $Y$ и $Z$.
+Случайным образом на сфере $x^2+y^2+z^2=1$ равномерно выбирается точка. 
+Её координаты — случайные величины $X$, $Y$ и $Z$.
 
 \begin{enumerate}
 	\item Найдите функцию плотности величины $X$;
 	\item Найдите совместную функцию плотности пары величин $X$ и $Y$;
 \end{enumerate}
 \begin{sol}
-$X$ равномерна на $[-1;1]$; пара $(X, Y)$ равномерна в круге $x^2+y^2 \leq 1$.
+Величина $X$ равномерна на $[-1;1]$; пара $(X, Y)$ равномерна в круге $x^2+y^2 \leq 1$.
 \end{sol}
 \end{problem}
 
