maxlik error removed

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -743,6 +743,26 @@ $ 2/3 $, $1/2$, $ 1/2 $, $ 14/27 $
 \end{sol}
 \end{problem}
 
+\begin{problem}
+У Ивана Грозного $n$ бояр. 
+Каждый боярин берёт мзду независимо от других с вероятностью $1/2$.
+
+\begin{enumerate}
+  \item Какова вероятность того, что все бояре берут мзду, если случайно выбранный боярин берёт мзду?
+  \item Какова вероятность того, что все бояре берут мзду, если хотя бы один из бояр берёт мзду?
+\end{enumerate}
+
+\begin{sol}
+\begin{enumerate}
+  \item $(1/2)^n / (1/2) = 1 / 2^{n - 1}$;
+  \item $(1/2)^n / (1 - (1/2)^n) = 1 / (2^n - 1)$;
+\end{enumerate}
+
+\end{sol}
+\end{problem}
+
+
+
 \section{Use Julia/R/python/\ldots or die!}
 
 
@@ -2465,7 +2485,15 @@ $X\sim \cN(\mu;\sigma^{2})$, $Y\sim U[0;20]$ и $Z\sim Exp(1)$.
 
 
 \begin{problem}
-  Весна, половодье. На пеньках ждут спасения зайцы. Их очень много. Количество зайев на каждом пеньке — случайная величина равновероятно принимающая значения от 1 до 19. У Деда Мазая две стратегии. Стратегия А: перевозить зайецев на безопасное место равными партиями по 10 штук. Стратегия Б: спасать за одну перевозку зайцев с одного пенька. При какой стратегии у Деда Мазая в среднем будет меньше перевозок?
+  Весна, половодье. На пеньках ждут спасения зайцы. 
+  Их очень много. Количество зайев на каждом пеньке — случайная величина равновероятно принимающая значения от 1 до 19. 
+  У Деда Мазая две стратегии. 
+  
+  Стратегия А: перевозить зайецев на безопасное место равными партиями по 10 штук. 
+  
+  Стратегия Б: спасать за одну перевозку зайцев с одного пенька. 
+  
+  При какой стратегии у Деда Мазая в среднем будет меньше перевозок?
 \begin{sol}
 \end{sol}
 \end{problem}
@@ -4273,15 +4301,25 @@ $\Var(\langle Z, z\rangle)=1$; $\Cov(\hat Z_i, \hat Z_j)=v_i v_j \Var( \langle Z
 \end{sol}
 \end{problem}
 \begin{problem}
-  «Про зайцев». В темно-синем лесу, где трепещут осины, живут $n >> 0$ зайцев. Мы случайным образом отловили $100$ зайцев. Каждому из них на левое ухо мы завязали бант из красной ленточки и потом всех отпустили. Через неделю будет снова отловлено $100$ зайцев. Из них случайное количество $S$ зайцев окажутся с бантами.
+  «Про зайцев». В темно-синем лесу, где трепещут осины, живут $n >> 0$ зайцев. 
+  Мы случайным образом отловили $100$ зайцев. 
+  Каждому из них на левое ухо мы завязали бант из красной ленточки и потом всех отпустили. 
+  Через неделю будет снова отловлено $100$ зайцев. Из них случайное количество $S$ зайцев окажутся с бантами.
 
 \begin{enumerate}
-\item Постройте ML и MM оценку для неизвестного параметра $n$, если оказалось, что $s=80$
-\item Постройте ML и MM оценку для неизвестного параметра $n$ в общем случае
+\item Постройте ML и MM оценку для неизвестного параметра $n$, если оказалось, что $s=80$.
+\item Постройте ML и MM оценку для неизвестного параметра $n$ в общем случае.
 \end{enumerate}
 
 \begin{sol}
-Метод правдоподобия: $\max_n \P(S=80)$. Замечаем, что $S \sim Bin\left(100, p=\frac{100}{n}\right)$. Отсюда, $\hat n_{ML} = 125$.
+Метод правдоподобия. Замечаем, что $L(n)=\P(S = 80 \mid \theta) = \frac{C_{?}^{80}C_{?}^{20}}{C_n^{100}}$.
+Ошибочно утверждать, что $S \sim Bin\left(100, p=\frac{100}{n}\right)$, так как вероятность 
+поймать очередного зайца с бантом изменяется при поимке очередного зайца с бантом. 
+
+Максимизируем вероятность, $\hat n_{ML} = 125$. Для максимизации полезно рассмотреть неравенство $L(n) > L(n-1)$ и понять,
+что бы это значило. 
+
+Максимизация ошибочной функции здесь даёт тот же ответ, но благородные доны и доньи так не поступают!
 
 Метод моментов. Рассмотрим $Y_1$, $Y_2$, \ldots, $Y_n$. Величина $Y_i$ равна 1 если при втором отлове $i$-ый заяц оказался с бантом и 0 иначе.
 
